[package]
name = "signal-backup-decode"
version = "0.2.3"
authors = ["pajowu <pajowu@pajowu.de>"]
build = "build.rs"
description = "A simple tool to decode signal backups"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/pajowu/signal-backup-decode"
edition = "2018"

[dependencies]
protobuf = "=2.22"
byteorder = "^1"
rust-ini = "^0.21"
clap = "^4.5"
simplelog = "^0.12"
anyhow = "^1.0"
log = "^0.4"
rusqlite = "^0.37"
hkdf = "^0.12"
sha2 = "^0.10"
hmac = "^0.12"
generic-array = "^1.2"
subtle = "^2.2"
indicatif = "^0.18"
infer = "^0.19"
csv = "^1.1"
serde = { version = "^1.0", features = ["derive"] }
chrono = { version = "^0.4", features = ["serde"] }
openssl = "^0.10"

[build-dependencies]
protoc-rust = {version = "^2.22", optional = true}

[features]
default = []
rebuild-protobuf = ["protoc-rust"]
